--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,23 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <style>
+      @font-face {
+      font-family: Avenir-Book;
+      src: url("<%= BASE_URL %>fonts/poppins/AvenirBook.ttf");
+    }
+
+    @font-face {
+      font-family: Avenir-Heavy;
+      src: url("<%= BASE_URL %>fonts/poppins/AvenirHeavy.otf");
+    }
+
+    @font-face {
+      font-family: Avenir-Medium;
+      src: url("<%= BASE_URL %>fonts/poppins/AvenirMedium.ttf");
+    }
+
+</style>
   </head>
   <body>
     <noscript>
